[metadata]
name = TorchShard
version = 0.1.0
url = https://github.com/KaiyuYue/torchshard 
author = Kaiyu Yue
author_email = kaiyuyue@umd.edu
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
description = Torchshard: Slicing a PyTorch Tensor Into Parallel Shards.
long_description = TorchShard is a lightweight engine for slicing a PyTorch tensor into parallel shards. It can reduce GPU memory and scale up the training when the model has massive linear layers (e.g., ViT, BERT and GPT) or huge classes (millions). It has the same API design as PyTorch.
long_description_content_type = text/x-rst

[options]
python_requires = >=3.6
